--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=Abv6hYurB2yUHNutRWSfgkKJosg2e6UlYxwzaNnqZq4LM3w_4JO6sBzjpSEkp6V7iMaKEutdoaVVc6rv&currency=USD"></script>
   </body>
 
 </html>
